# qm-nmr-calc

./: .env.example  .gitignore  Caddyfile  Dockerfile.api  Dockerfile.worker  Dockerfile.worker.arm64  README.md  docker-compose.build-arm64.yml  docker-compose.build.yml  docker-compose.yml  env-worker-arm64.yaml  molecule_geom-000.xyz  molecule_geom-001.xyz  molecule_geom-002.xyz  molecule_geom-003.xyz  molecule_geom-004.xyz  molecule_geom-005.xyz  molecule_geom-006.xyz  molecule_geom-007.xyz  molecule_geom-008.xyz  molecule_geom-009.xyz  molecule_geom-010.xyz  molecule_geom-011.xyz  molecule_geom-012.xyz  molecule_geom-013.xyz  molecule_geom-014.xyz  molecule_geom-015.xyz  molecule_geom-016.xyz  molecule_geom-017.xyz  molecule_geom-018.xyz  molecule_geom-019.xyz  molecule_geom-020.xyz  molecule_geom-021.xyz  molecule_geom-022.xyz  molecule_geom-023.xyz  molecule_geom-024.xyz  molecule_geom-025.xyz  molecule_geom-026.xyz  molecule_geom-027.xyz  molecule_geom-028.xyz  (+59 more)
.planning/: .continue-here.md  BACKLOG.md  HANDOFF.md  INTEGRATION-CHECK.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  post-v2.6-problems.md  v2.7-MILESTONE-AUDIT.md
data/: tms_reference_values.json
docs/: README.md  architecture.md  deployment.md  installation.md  libraries.md  science.md  usage.md
gcp/: check-dns.sh  check-prerequisites.sh  config.sh.example  config.toml.example  delete-vm.sh  deploy-auto.sh  deploy-vm.sh  docker-compose.gcp.yml  logs-vm.sh  query_pricing.py  quick-deploy.sh  select_machine.py  setup-infrastructure.sh  shutdown.sh  ssh-vm.sh  start-vm.sh  startup.sh  status-vm.sh  stop-vm.sh  teardown-infrastructure.sh  validate_config.py  verify-deployment.sh
references/: conformational_sampling_nmr_analysis.md
scripts/: compute_tms_reference.py  generate_delta50_data.py  run_api.py  run_consumer.py  test-nwchem-container.sh  test_workflow.py  validate-api.sh  validate-compose.sh  validate-worker-arm64-full.sh  validate-worker-arm64.sh  validate-worker.sh
tests/: test_api.py  test_atom_ordering.py  test_backward_compat.py  test_benchmark.py  test_boltzmann.py  test_clustering.py  (+16 more)
(+577 files in other folders)
