[project]
name = "qm-nmr-calc"
version = "0.1.0"
description = "Asynchronous web service for NMR quantum mechanical calculations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "huey>=2.6.0",
    "isicle",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "rdkit>=2025.9.3",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qm_nmr_calc"]

[tool.uv.sources]
isicle = { path = "../isicle", editable = true }
