[project]
name = "qm-nmr-calc"
version = "0.1.0"
description = "Asynchronous web service for NMR quantum mechanical calculations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.0",
    "huey>=2.6.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.10.0",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "rdkit>=2025.9.3",
    "scipy>=1.17.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qm_nmr_calc"]

[tool.hatch.build.targets.wheel.force-include]
"src/qm_nmr_calc/data" = "qm_nmr_calc/data"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
